fixed scrollbar, made it fabulous

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -143,6 +143,8 @@ $mobile_portrait_length: 480px !default;
     --input-placeholder: var(--light-green);
 
     --modal-color: white;
+    --scroll-track-color: rgba(110, 24, 105, 1);
+    --scroll-thumb-color: rgba(245, 125, 239, 1);
     //~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
     --headline-head-color: var(--orange);
